<resources>
    <string name="app_name">Test</string>
    <string name="nama">Nama</string>
    <string name="next">Next</string>
    <string name="nama_label">Nama :</string>
    <string name="pilih_guest">Pilih Guest</string>
    <string name="nama_event">Nama Event</string>
    <string name="tanggal_item">Tanggal Item</string>
    <string name="pilih_event">Pilih Event</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="plus_button">Plus Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selesai">Selesai</string>
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="event_image">Event Image</string>
</resources>