<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/labelNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/nama_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <TextView
        android:id="@+id/namaGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/labelNama"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="150dp"
        android:hint="@string/nama">
    </TextView>

    <Button
        android:id="@+id/eventButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pilih_event"
        app:layout_constraintTop_toBottomOf="@+id/namaGuest"
        android:layout_marginTop="16dp">
    </Button>

    <Button
        android:id="@+id/gusetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pilih_guest"
        app:layout_constraintTop_toBottomOf="@+id/eventButton"
        android:layout_marginTop="16dp">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>