<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_validation"
    tools:context=".ui.MainActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/selamatdatang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/selamat_datang"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp">
    </TextView>

    <TextView
        android:id="@+id/detailtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Sertakan gambar profil Anda untuk melengkapi profil"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintTop_toBottomOf="@id/selamatdatang"
        android:layout_marginTop="60dp">
    </TextView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:src="@drawable/btnphoto"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="90dp"
        app:civ_border_width="1dp"
        app:civ_border_color="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailtext">
    </de.hdodenhof.circleimageview.CircleImageView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/selesai"
        android:textAllCaps="false"
        android:backgroundTint="@android:color/transparent"
        app:strokeColor="@color/white"
        app:cornerRadius="5dp"
        app:strokeWidth="1dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:layout_marginTop="16dp">
    </com.google.android.material.button.MaterialButton>


</androidx.constraintlayout.widget.ConstraintLayout>